Bug : BI-12977 Description : Resolved vulnerabilities in spring-core-5.2.0.RELEASE.jar, by changing the version of spring-core to 5.3.28

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>uk.gov.companieshouse</groupId>
         <artifactId>companies-house-spring-boot-parent</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1</version>
     </parent>
     <artifactId>company-documents.web.ch.gov.uk</artifactId>
     <version>unversioned</version>
@@ -42,6 +42,16 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <!--
+         spring-core is a transitive dependency of spring security web. The version used by spring-security-web had a critical
+        vulnerability this version overrides that to a non-vulnerable version
+        -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>5.3.28</version>
         </dependency>
 
         <dependency>
